<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <ScrollView
            android:orientation="vertical"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:id="@+id/scrolling_container"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/instance_container"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invidious_instances"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/invidious_instances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nitter_instances"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nitter_instances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bibliogram_instances"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bibliogram_instances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/latency_test"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:text="@string/latency"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/close"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:text="@string/close"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>

